cmake_minimum_required(VERSION 3.25)
project(untitled2)

set(CMAKE_CXX_STANDARD 23)


#add_executable(untitled2 main.cpp Algorithms/algorithms/SelectionSort.cpp)
#add_executable(untitled2 main.cpp Algorithms/algorithms/InsertionSort.cpp)
#add_executable(untitled2 main.cpp Algorithms/algorithms/MergeSort.cpp)
#add_executable(untitled2 main.cpp Algorithms/algorithms/QuickSort.cpp)
#add_executable(untitled2 main.cpp Algorithms/algorithms/RadixSort.cpp)
#add_executable(untitled2 main.cpp Algorithms/algorithms/HeapSort.cpp)
#add_executable(untitled2 main.cpp Algorithms/algorithms/ShellSort.cpp)
#add_executable(untitled2 main.cpp Algorithms/algorithms/CountingSort.cpp)
#add_executable(untitled2 main.cpp Algorithms/algorithms/BucketSort.cpp)
#add_executable(untitled2 main.cpp Algorithms/algorithms/BubbleSort.cpp)

#add_executable(untitled2 main.cpp Algorithms/search-algorithms/LinearSearch.cpp)
#add_executable(untitled2 main.cpp Algorithms/search-algorithms/BinarySearch.cpp)

add_executable(untitled2 main.cpp DataStructures/CollectionDataStructures/Stack.cpp DataStructures/TreeBasedDataStructures/binaryTree.cpp)